# calibration

./: .gitignore  README.md
src/baseInWorld/: workFlow.cpp
src/calibration/: Makefile  WorldCalib  baseFromCam.cpp  calib  cameraCalibration.cpp  dhTable.txt  eyeInHand  single_camera.cpp
src/calibration/eyeInHand/: Makefile  cameraCalib
src/eyeInHand/: Makefile  calibration_data.txt  cameraCalibration.cpp  fakeCalib  fakeCalibration.cpp
src/m6r_bringup/: CMakeLists.txt  package.xml
src/m6r_bringup/config/: initial_pose.yaml  ros2_controllers.yaml  workcell1.yaml
src/m6r_bringup/launch/: m6r.launch.xml  m6r_bringup.launch.py  m6r_custom.launch.py  m6r_gazebo.launch.py
src/m6r_bringup/world/: charuco.world  eyeInHand.world
src/m6r_calibration/: CMakeLists.txt  README.md  package.xml
src/m6r_calibration/baseInWorld/: aruco_manul.py  findWordFrame.cpp  findWordFrame.py  manul_find.py
src/m6r_calibration/eyeInHand/: aruco_estimation.py  charucoEstimation.py  final_calibration.py  joint_positions.py
src/m6r_calibration/eyeInHand/calib_results_20260118_151058/: hand_eye_data.yaml
src/m6r_calibration/eyeInHand/calib_results_20260118_152128/: hand_eye_data.yaml
src/m6r_calibration/eyeInHand/output_20260111_195859/: hand_eye_data.yaml
src/m6r_calibration/eyeInHand/output_20260111_205304/: hand_eye_data.yaml
src/m6r_calibration/eyeInHand/output_20260111_205512/: hand_eye_data.yaml
src/m6r_calibration/eyeInHand/output_20260111_205836/: hand_eye_data.yaml
src/m6r_calibration/eyeInHand/output_20260118_151357/: hand_eye_data.yaml
src/m6r_calibration/src/: joint_control.cpp  joint_valid_input.cpp  test_moveit.cpp
src/m6r_calibration/src/position_control/: collision_free_demo.cpp  collision_load.cpp  pose_control.cpp  pose_obstacle.cpp
src/m6r_description/: CMakeLists.txt  package.xml  readme.md
src/m6r_description/config/: controllers.yaml
src/m6r_description/launch/: display.launch.xml  display_m6r.launch.py
src/m6r_description/meshes/: base_link.STL  elbow_link.STL  forearm_link.STL  shoulder_link.STL  waist_link.STL  wriste_pitch.STL  wriste_roll.STL
src/m6r_description/meshes/m6r_0110/: base_link.STL  camera.STL  elbow_link.STL  forearm_link.STL  shoulder_link.STL  waist_link.STL  wriste_pitch.STL  wriste_roll.STL
src/m6r_description/rviz/: calib_bringup.rviz  gazebo_bringup.rviz  m6r_bringup.rviz  view_m6r.rviz
src/m6r_description/urdf/: camera.xacro  camera2.xacro  gazebo.ros2_control.xacro  m6r.gazebo.xacro  m6r.ros2_control.xacro  m6r.urdf  m6r.urdf.xacro  m6r.xacro  m6r_0110.urdf  m6r_0110.xacro
src/m6r_mod_moveit_config2/: .setup_assistant  CMakeLists.txt  package.xml
src/m6r_mod_moveit_config2/config/: initial_positions.yaml  m6r.srdf  m6r.urdf.xacro  ompl_planning.yaml
src/m6r_mod_moveit_config2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/m6r_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  setup.md
src/m6r_moveit_config/config/: joint_limits.yaml  m6r.ros2_control.xacro  m6r.srdf  m6r.urdf.xacro
src/m6r_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
